C9: Validaciones agregada a Usuarios, Roles, Clientes y Colores